--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my second github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <p>i love you</p> 
    <p>why not love me</p>
+   <img src="images.jpg" alt="">
 </body>
 </html>
